--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^\.]+)$ $1.php [NE,L]
+ErrorDocument 404 /404.php
+ErrorDocument 500 /500.php
